[package]
name = "webapi"
version = "0.1.0"
edition = "2024"

[dependencies]
iron = "0.5"
router = "0.5"
logger = "0.2"
env_logger = "0.3"
rustc-serialize = "0.3"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }